# GifPlay

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/app/gifplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/app/gifplay/: GifHandler.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/app/gifplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
